--- a/localhost_7185/index.html
+++ b/localhost_7185/index.html
@@ -1234,7 +1234,7 @@
                               <!-- 1st Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-1.webp" class="module-img"
                                        style="color:transparent" width="180" height="180">
                                  </section>
@@ -1277,7 +1277,7 @@
                               <!-- 3rd Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-3.webp" class="module-img"
                                        style="color:transparent" width="220" height="180">
                                  </section>
@@ -1320,7 +1320,7 @@
                               </div>
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-5.webp" class="module-img"
                                        style="color:transparent" width="220" height="180">
                                  </section>
@@ -1363,7 +1363,7 @@
                               <!-- 7th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-1.webp" class="module-img"
                                        style="color:transparent" width="200" height="180">
                                  </section>
@@ -1412,7 +1412,7 @@
                               <!-- 2nd Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-2.webp" class="module-img"
                                        style="color:transparent" width="180" height="180">
                                  </section>
@@ -1456,7 +1456,7 @@
                               <!-- 4th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-4.webp" class="module-img"
                                        style="color:transparent" width="200" height="180">
                                  </section>
@@ -1500,7 +1500,7 @@
                               <!-- 6th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-6.webp" class="module-img"
                                        style="color:transparent" width="200" height="180">
                                  </section>
@@ -1544,7 +1544,7 @@
                               <!-- 8th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container">
                                     <img alt="module-logo" src="assets/images/module-1.webp" class="module-img"
                                        style="color:transparent" width="180" height="200">
                                  </section>
