Add static content of ASP.NET MVC website

--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
                   </div>
 
                   <div class="the-catch font-regular text-purple text-left my-5 trailing-sm">
-                     <p class="font-regular fw-bold">Next.js 13 & 14 are new. There is no good way to learn them out
-                        there.</p>
+                     <p class="font-regular fw-bold">There is no good way to learn them out there.</p>
 
                      <p>Most content on HTML, CSS, and JavaScript is basic.</p>
 
@@ -291,7 +290,7 @@
 
                   <div class="the-catch font-regular text-purple text-left my-5">
 
-                     <p>I spent almost a year deep in the Next.js ocean.</p>
+                     <p>I've spent 5 years deep in the Software Engineering ecosystem.</p>
 
                      <ul class="trailing-sm">
                         <li>Building massive apps for clients.</li>
@@ -310,7 +309,7 @@
                   </div>
 
                   <h2 class="text-gradient-orange text-left fw-bold font-regular">I finally decided on this three-part
-                     learning method for learning Next14 so you don’t have to struggle:</h2>
+                     learning method for learning Software development so you don’t have to struggle:</h2>
                </article>
 
                <article class="deep-dive">
