Add static content of ASP.NET MVC website

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-3 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/terryc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/terryc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -643,7 +643,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/markc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/markc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -735,7 +735,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/andrewc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/andrewc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -827,7 +827,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -926,7 +926,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-3 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/terryc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/terryc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -1018,7 +1018,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -1110,7 +1110,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -1202,7 +1202,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
