Add static content of ASP.NET MVC website

--- a/index.html
+++ b/index.html
@@ -2138,11 +2138,11 @@
 
 
    <!-- Visual Studio Browser Link -->
-   <script type="text/javascript" src="_vs/browserLink" async="async" id="__browserLink_initializationData"
+   <script type="text/javascript" src="./_vs/browserLink" async="async" id="__browserLink_initializationData"
       data-requestId="f01c0c4694be4d0e856e0729f2e9c7f6" data-requestMappingFromServer="false"
       data-connectUrl="http://localhost:8325/47cf10e88c764293b045b9e9bf15d602/browserLink"></script>
    <!-- End Browser Link -->
-   <script src="_framework/aspnetcore-browser-refresh.js"></script>
+   <script src="./_framework/aspnetcore-browser-refresh.js"></script>
 </body>
 
 <!-- Mirrored from localhost:7185/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 03 Jul 2024 15:59:12 GMT -->
