--- a/Payment/Verify.html
+++ b/Payment/Verify.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from localhost:7185/Payment/Verify by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 16 Jul 2024 10:52:21 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-<head>
+   <head>
+   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>make payment - MiT</title>
@@ -108,5 +107,4 @@
 <!-- End Browser Link -->
 <script src="../_framework/aspnetcore-browser-refresh.js"></script></body>
 
-<!-- Mirrored from localhost:7185/Payment/Verify by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 16 Jul 2024 10:52:21 GMT -->
 </html>
