modified/responsive settings

--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
                               <!-- 1st Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-1.webp" class="module-img"
                                        style="color:transparent" width="180" height="180">
                                  </section>
@@ -1286,7 +1286,7 @@
                               <!-- 3rd Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-3.webp" class="module-img"
                                        style="color:transparent" width="220" height="180">
                                  </section>
@@ -1329,7 +1329,7 @@
                               </div>
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-5.webp" class="module-img"
                                        style="color:transparent" width="220" height="180">
                                  </section>
@@ -1372,7 +1372,7 @@
                               <!-- 7th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-1.webp" class="module-img"
                                        style="color:transparent" width="200" height="180">
                                  </section>
@@ -1421,7 +1421,7 @@
                               <!-- 2nd Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-2.webp" class="module-img"
                                        style="color:transparent" width="180" height="180">
                                  </section>
@@ -1465,7 +1465,7 @@
                               <!-- 4th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-4.webp" class="module-img"
                                        style="color:transparent" width="200" height="180">
                                  </section>
@@ -1509,7 +1509,7 @@
                               <!-- 6th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-6.webp" class="module-img"
                                        style="color:transparent" width="200" height="180">
                                  </section>
@@ -1553,7 +1553,7 @@
                               <!-- 8th Flex Item -->
                               <div
                                  class="course-outline-bg b-radius-sm flex-col text-light text-left p-4 col-lg-12 col-md-12 col-sm-12">
-                                 <section class="module-img-container" style="">
+                                 <section class="module-img-container" >
                                     <img alt="module-logo" src="assets/images/module-1.webp" class="module-img"
                                        style="color:transparent" width="180" height="200">
                                  </section>
