--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="MiT.stylese986.css?v=28QaAa6mye0LYy7DOSb1jw8QSZw3rYgQSrrrxGZpZhk" />
    <link rel="stylesheet" href="css/responsive.css" />
    <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+   <link rel="icon" href="./favicon.png">
 </head>
 
 <body>
