modified/responsive settings

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Home Page - MiT</title>
+   <title>The Man In Tech</title>
    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
    <link rel="stylesheet" href="css/site623c.css?v=GNdyBBETl3DRnBpO5KPBI4d0V3T637ZloUcOmqTGrjU" />
    <link rel="stylesheet" href="MiT.stylese986.css?v=28QaAa6mye0LYy7DOSb1jw8QSZw3rYgQSrrrxGZpZhk" />
@@ -554,7 +554,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="text-gradient-orange"></span>@Thetechlead </span>
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
@@ -646,7 +646,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="fw-bolder text-custom-purple2">@Thetechlead </span>  
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
@@ -738,7 +738,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="fw-bolder text-custom-purple2">@Thetechlead </span>  
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
@@ -830,7 +830,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="fw-bolder text-custom-purple2">@Thetechlead </span>  
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
@@ -853,7 +853,7 @@
 
 
 
-                        <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="col-lg-6 col-md-6 col-sm-12 font-xsmall">
                            <div class="row gy-3">
                               <div class="flex-start flex-col gap-4 bg-dark b-radius-sm p-4 px-4 text-left">
                                  <div class="mb-3">
@@ -929,7 +929,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="fw-bolder text-custom-purple2">@Thetechlead </span>  
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
@@ -1021,7 +1021,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="fw-bolder text-custom-purple2">@Thetechlead </span>  
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
@@ -1113,7 +1113,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="fw-bolder text-custom-purple2">@Thetechlead </span>  
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
@@ -1205,7 +1205,7 @@
                                        </defs>
                                     </svg>
                                  </div>
-                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way Adrian
+                                 <div class="body-regular">JS Mastery's Next.js course is amazing. The way <span class="fw-bolder text-custom-purple2">@Thetechlead </span>  
                                     structures the course by giving you active lessons that you build out on your own is
                                     perfect for learning. These active lessons have just the right amount of difficulty
                                     so you are never lost yet are always pushing yourself and learning more. Also, by
