--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-3 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/terryc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/terryc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -654,7 +654,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/markc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/markc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -746,7 +746,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/andrewc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/andrewc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -838,7 +838,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -937,7 +937,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-3 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/terryc218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/terryc218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -1029,7 +1029,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -1121,7 +1121,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
@@ -1213,7 +1213,7 @@
                                     portfolio stand out.</div>
                                  <div class="d-flex align-items-center gap-3 mt-5 mb-2">
                                     <div>
-                                       <img alt="avatar" src="../robohash.org/Tolac218.png?set=set4" width="100"
+                                       <img alt="avatar" src="./robohash.org/Tolac218.png?set=set4" width="100"
                                           height="100">
                                     </div>
                                     <div>
