modified/responsive settings

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="css/site623c.css?v=GNdyBBETl3DRnBpO5KPBI4d0V3T637ZloUcOmqTGrjU" />
    <link rel="stylesheet" href="MiT.stylese986.css?v=28QaAa6mye0LYy7DOSb1jw8QSZw3rYgQSrrrxGZpZhk" />
    <link rel="stylesheet" href="css/responsive.css" />
-   <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+   <link rel="stylesheet" href="./cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
    <link rel="icon" href="./favicon.png">
 </head>
 
@@ -2153,7 +2153,7 @@
                                  bank transfer</h2>
                               <p style="font-size: 14px; color: rgb(196, 196, 196); margin-bottom: 1.5rem">
                                  All payment are safe and secure, we'll wait'.
-                                 <img class="spin" width="40" height="40" src="../img.icons8.com/bubbles/100/cash.png"
+                                 <img class="spin" width="40" height="40" src="./img.icons8.com/bubbles/100/cash.png"
                                     alt="cash" />
                               </p>
 
@@ -2162,7 +2162,7 @@
                                     <div class="input-container" style="padding-right: 1rem;">
                                        <select class="bg-select"
                                           style="color: rgb(196, 196, 196); margin-top: .7rem; background-color: rgb(51, 51, 51);">
-                                          <option disabled selected>Transfer Type</option>
+                                          <option disabled selected>Select Transfer Type</option>
                                           <option value="mobileapp">Mobile App (Opay: 8059974620)</option>
                                           <option value="USSD">Bank USSD (*955#)</option>
                                           <option value="deposit">Bank Deposit</option>
@@ -2244,6 +2244,6 @@
       data-requestId="7c8efcdbad0a42de8b3a0413310b42b2" data-requestMappingFromServer="false"
       data-connectUrl="http://localhost:11313/b5b4c99468e046f7884b9c1647789cd6/browserLink"></script>
    <!-- End Browser Link -->
-   <script src="_framework/aspnetcore-browser-refresh.js"></script>
+   <script src="./_framework/aspnetcore-browser-refresh.js"></script>
 </body>
 </html>
